# Hangman

./: CMakeLists.txt
include/: File.hpp  Game.hpp  Settings.hpp  Word.hpp  utils.hpp
src/: File.cpp  Game.cpp  Settings.cpp  Word.cpp  main.cpp  utils.cpp
words/english/: 10_letters.txt  11_letters.txt  12_letters.txt  13_letters.txt  14_letters.txt  15_letters.txt  2_letters.txt  3_letters.txt  4_letters.txt  6_letters.txt  7_letters.txt  8_letters.txt  9_letters.txt
words/french/: 10_letters.txt  11_letters.txt  12_letters.txt  13_letters.txt  14_letters.txt  15_letters.txt  2_letters.txt
